force-app/main/default/objects/Attachment__c/fields/AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>AttachmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attachment</label>
    <referenceTo>Attachment__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>