force-app/main/default/objects/Attachment__c/fields/COB_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>COB_Owner_Email__c</fullName>
    <label>COB_Owner_Email</label>
    <type>Email</type>
</CustomField>