force-app/main/default/objects/Attachment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>