force-app/main/default/objects/Attachment__c/fields/Customer_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Customer_Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Onboarding</label>
    <referenceTo>Customer_Onboarding__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>