force-app/main/default/objects/Attachment__c/fields/Display_Size__c.field-meta.xml
<CustomField>
    <fullName>Display_Size__c</fullName>
    <label>Display Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>