force-app/main/default/objects/Attachment__c/fields/Dropbox_FileId__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_FileId__c</fullName>
    <label>Dropbox FileId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>