force-app/main/default/objects/Attachment__c/fields/Dropbox_Link__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Link__c</fullName>
    <label>Dropbox Link</label>
    <type>Url</type>
</CustomField>