force-app/main/default/objects/Attachment__c/fields/DropBox_PathLower__c.field-meta.xml
<CustomField>
    <fullName>DropBox_PathLower__c</fullName>
    <label>DropBox PathLower</label>
    <length>255</length>
    <type>Text</type>
</CustomField>