force-app/main/default/objects/Attachment__c/fields/Fulfillment_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Document_Type__c</fullName>
    <label>Fulfillment Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Feed</fullName>
            </value>
            <value>
                <fullName>Marketplace Mapping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>