force-app/main/default/objects/Attachment__c/fields/LastModified_Email__c.field-meta.xml
<CustomField>
    <fullName>LastModified_Email__c</fullName>
    <label>LastModified_Email</label>
    <type>Email</type>
</CustomField>