force-app/main/default/objects/Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled cheque</fullName>
            </value>
            <value>
                <fullName>Pan card</fullName>
            </value>
            <value>
                <fullName>Address proof</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>GST Declaration Form</fullName>
            </value>
            <value>
                <fullName>Saas</fullName>
                <isActive>false</isActive>
                <label>Saas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>